Header alignment fixes

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -34,23 +34,158 @@ body {
    HEADER
    =============================== */
 
+
+
+.bk-header {
+   
+    .wrapper {
+      // Flex parent
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+      align-content: flex-start;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+      @media @tablet {
+        display: block;
+      }
+
+    .companyheader {
+      // Flex child
+       -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 0;
+      -moz-box-flex: 0;
+      -webkit-flex: 0 1 auto;
+      -ms-flex: 0 1 auto;
+      flex: 0 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+
+      // Flex parent
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-box-direction: normal;
+      -moz-box-direction: normal;
+      -webkit-box-orient: horizontal;
+      -moz-box-orient: horizontal;
+      -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+      flex-direction: row;
+      -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      -webkit-box-pack: justify;
+      -moz-box-pack: justify;
+      -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+      -webkit-align-content: flex-start;
+      -ms-flex-line-pack: start;
+      align-content: flex-start;
+      -webkit-box-align: center;
+      -moz-box-align: center;
+      -webkit-align-items: center;
+      -ms-flex-align: center;
+      align-items: center;
+
+      @media @mobile {
+        display: block;
+      }
+      @media @tablet {
+        padding-right: 40px;
+      }
+
+      .widget.companyname {
+        // Flex child
+        -webkit-box-ordinal-group: 1;
+        -moz-box-ordinal-group: 1;
+        -webkit-order: 0;
+        -ms-flex-order: 0;
+        order: 0;
+        -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+        -webkit-align-self: auto;
+        -ms-flex-item-align: auto;
+        align-self: auto;
+      }
+    }
+    .extendednavigation {
+      // Flex child
+      -webkit-box-ordinal-group: 1;
+      -moz-box-ordinal-group: 1;
+      -webkit-order: 0;
+      -ms-flex-order: 0;
+      order: 0;
+      -webkit-box-flex: 1;
+      -moz-box-flex: 1;
+      -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+      flex: 1 1 auto;
+      -webkit-align-self: auto;
+      -ms-flex-item-align: auto;
+      align-self: auto;
+    }
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
 header.bk-header {
   padding: 0;
   border-top: 4px solid @color-swatch3;
 }
 
 .companyheader {
-  display: block;
-  float: left;
   padding: 11px 0px;
 }
 
 /* COMPANY NAME */
 
 .widget.companyname {
-  display: block;
-  float: left;
-  margin-top: 10px;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .companyname a:hover {
@@ -70,14 +205,18 @@ header.bk-header {
 /* LOGO */
 
 .widget.logo {
-  display: block;
-  padding: 8px 8px 8px 0;
-  float: left;
+  display: inline-block;
+  padding: 0 8px 0 0;
+  vertical-align: middle;
+  min-width: 50px;
+  .logo, img {
+    line-height: 0;
+
+  }
 }
 
 
 .widget.companyheader {
-  float: left;
   overflow-x: auto;
   overflow-y: hidden;
 }
@@ -222,8 +361,19 @@ footer.bk-footer .widget.content {
 .widget.extendednavigation ul li {
   float: left;
   display: block;
-  padding: 26px 0 19px 0;
   border-bottom: 4px solid @color-swatch2;
+  &.selected {
+    border-bottom: 4px solid fade(@color-swatch3, 50%);
+  }
+
+  a {
+    padding: 0;
+  }
+  .text {
+     padding: 26px 18px 19px;
+     display: block;
+  }
+
 }
 
 
@@ -234,7 +384,6 @@ footer.bk-footer .widget.content {
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
   display: block;
-  padding: 1px 17px;
   font-family:@font-swatch6-font-family;
   font-size:@font-swatch6-font-size;
   font-weight: @font-swatch6-font-weight;
@@ -253,9 +402,13 @@ footer.bk-footer .widget.content {
 }
 
 .widget.extendednavigation ul li.folder {
-  padding-right: 1px;
   height: 100%;
   cursor: pointer;
+  margin-right: 0;
+  ul .text {
+     padding: 20px 18px 13px;
+     background: fade(@color-swatch2, 30%);
+  }
 }
 
 .widget.extendednavigation ul li.folder {
@@ -286,32 +439,11 @@ footer.bk-footer .widget.content {
   margin-top: 20px;
 }
 
-.widget.extendednavigation li:hover > ul > li {
-  display: block;
-  width: 100%;
-  border-bottom: 1px solid @color-swatch1;
-  padding: 10px 0;
-}
 
-.widget.extendednavigation li:hover > ul > li:last-child {
-  border-bottom: none;
-}
 
-.widget.extendednavigation li:hover > ul > li > a {
-  display: block;
-  background-image: none;
-  color: @font-swatch6-color;
-  margin-left: 0;
-  padding:0;
-}
 
-.widget.extendednavigation li:hover > ul > li > a .text {
-  margin-left: 0;
-}
 
-.widget.extendednavigation li:hover > ul > li > a:hover {
-  color: @font-swatch6-color-hover;
-}
+
 
 /* EXTENDED NAVIGATION - INSIDE ZONE */
 
@@ -2073,13 +2205,12 @@ footer.bk-footer .widget.profile .twitter span {
     width: 100%;
     padding: 0;
     border-top: 4px solid @color-swatch2;
+    ul li a .text, .folder .text {
+      padding: 16px 0;
+    }
   }
 
-  .widget .extendednavigation {
-    display: block;
-    float: left;
-    width: 100%;
-  }
+
 
   /* NAV ICON */
 
@@ -2087,13 +2218,13 @@ footer.bk-footer .widget.profile .twitter span {
     display: block;
     width: 100%;
     position: absolute;
-    top:-50px;
+    top: -40px;
   }
 
     .widget .extendednavigation a.pull:after {
     content:"";
     background: image('/images/nav-icon.png') no-repeat;
-    width: 30px;
+    width: 19px;
     height: 30px;
     display: inline-block;
     position: absolute;
@@ -2115,7 +2246,8 @@ footer.bk-footer .widget.profile .twitter span {
 
   .widget.extendednavigation ul li {
   border-bottom: 1px solid @color-swatch2;
-  padding: 16px 0;
+  padding: 0;
+
 }
 
 
@@ -2129,8 +2261,8 @@ footer.bk-footer .widget.profile .twitter span {
   }
 
   .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
-      padding: 5px 0;
       margin: 0;
+
   }
 
   .widget.extendednavigation ul li > ul {
@@ -2140,7 +2272,7 @@ footer.bk-footer .widget.profile .twitter span {
   .widget.extendednavigation ul li:hover > ul {
       display: block!important;
       width: 100%;
-      margin: 17px 0;
+      margin: 0;
       padding: 0;
   }
 
